fix reinitializing related resources + add missing text in link to results (#619)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2187,6 +2187,7 @@ span[lang^='sa-']:not([lang$='-ewts']) { text-transform: capitalize;}
 
 #popDL.export { background:white; box-shadow: 0 1px 4px #cecece;
    margin-top:0px; 
+   z-index: 1000000!important;
 }
 #popDL.export li { max-width:260px; white-space:normal; }
 
