--- a/src/components/App.css
+++ b/src/components/App.css
@@ -324,6 +324,8 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    padding-bottom:15px; padding-top:25px;
 }
 
+#filters-UI > div:empty { min-height:0; padding:0 0 30px 0;}
+
 .fond-logo + #filters-UI,
 #filters-UI:first-child { margin-top:0;  }
 .fond-logo + #filters-UI > div,
