--- a/src/components/App.css
+++ b/src/components/App.css
@@ -697,17 +697,16 @@ footer #donate,
 .App.guidedsearch.khmer .static-container.sticky .selector h2 > span { font-weight: 400; font-size:10px; vertical-align: 2px; text-transform: none; padding-left:20px;}
 .App.guidedsearch.khmer .static-container.sticky .selector:hover h2 > * { visibility: visible;}
 
-.App.guidedsearch.khmer .static-container.sticky > div:first-child .selector {padding-bottom:0; padding-top:30px;  position: relative; display: flex;
+.App.guidedsearch.khmer .static-container.sticky > div:first-child .selector {padding-bottom:0; padding-top:40px;  position: relative; display: flex;
    transition:all 100ms ease-in-out; align-items: center;
 }
-.App.guidedsearch.khmer.scrolled .static-container.sticky > div:first-child .selector { padding-top:10px;  }
+.App.guidedsearch.khmer.scrolled .static-container.sticky > div:first-child .selector { padding-top:0px;  }
 
-/*
-.App.guidedsearch.khmer .static-container.sticky > div:first-child .selector [data-prop] { position: absolute; right:0;  bottom:-13px; width:100%; text-align: center; 
+.App.guidedsearch.khmer .static-container.sticky > div:first-child .selector [data-prop] { position: absolute; right:0;  top:-45px; width:100%; text-align: right; 
    pointer-events:none;
 }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector [data-prop] > * { pointer-events: auto;}
-*/
+
 
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector label { margin:0; cursor: pointer; }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector label:first-of-type > span{ vertical-align:-2px; padding-right:12px;}
