--- a/src/components/App.css
+++ b/src/components/App.css
@@ -924,6 +924,10 @@ p.no-result {
 .no-result #clear-filters * { color:#d73449; }
 .no-result + .no-result { margin-top:0px;}
 
+.no-result .reset-khmer { display:flex; align-items: baseline;}
+.no-result .reset-khmer #clear-filters { display: inline-flex; }
+
+
 .no-result .uri-link { display:inline-block; margin-left:10px;  }
 
 .no-result.more-result { display:flex; align-items: baseline; margin-bottom:10px;}
