--- a/src/components/App.css
+++ b/src/components/App.css
@@ -819,6 +819,92 @@ footer #donate,
    }
    .App.guidedsearch.khmer .static-container.sticky + div { width:200px; right:0;  }
 
+
+}
+
+
+
+.App.browse.khmer .SearchPane > div > div { 
+   width:1222px; 
+   padding-left: 80px;
+   box-sizing: border-box;
+}
+
+
+.App.browse.khmer h1 { margin-top:70px; margin-bottom:50px; text-align: left; padding-left:35px;}
+
+.App.browse.khmer .SearchPane > div > div #samples {
+   padding-left:40px;
+   padding-right:70px;
+}
+
+.App.browse.khmer .SearchPane > div > div .head { display: flex;}
+
+.App.browse.khmer .SearchPane > div > div .head > div { 
+   font-size: 11px;
+   color: #d73449;
+   font-weight: 700;
+   width:120px;
+}
+
+
+.App.browse.khmer .SearchPane > div > div .param {
+   font-size:0;
+}
+
+.App.browse.khmer .SearchPane > div > div .param .val {
+   width:120px;
+   height:65px;
+   display: flex;
+   align-items: center;
+   font-size: 16px;
+   color:#172832;
+   position: relative;
+}
+
+.App.browse.khmer .SearchPane > div > div .head + .param > .val {
+   font-weight: 700;
+}
+
+.App.browse.khmer .SearchPane > div > div .param > .val.on {
+   color:#d73449;
+   font-weight: 700;
+}
+
+.App.browse.khmer .SearchPane > div > div .param  .val + [data-simplebar],
+.App.browse.khmer .SearchPane > div > div > div > .param > .param,
+.App.browse.khmer .SearchPane > div > div > div > .param > .param > .param,
+.App.browse.khmer .SearchPane > div > div > div > .param > .param > .param > .param {
+   padding-left:120px;
+}
+
+.App.browse.khmer .SearchPane > div > div .param  .val + [data-simplebar] {
+   /* padding-top:20px; */
+   background-color:rgba(239,239,239,0.425);
+}
+
+.App.browse.khmer .simplebar-scrollbar.simplebar-visible:before { opacity:0.35; }
+
+.App.browse.khmer .SearchPane > div > div .param > .val::before {
+   content:'';
+   display: block;
+   border-left:1px solid #d73449;
+   border-bottom:1px solid #d73449;
+   width:40px;
+   height:65px;
+   position: absolute;
+   left:-80px;
+   top:-30px;
+}
+
+.App.browse.khmer .SearchPane > div > div .param > .val:first-child::before {
+   height:35px;
+   top:0px;
+}
+
+.App.browse.khmer .SearchPane > div > div .param ~ .val::before,
+.App.browse.khmer .SearchPane > div > div .head +.param > .val::before {
+   content:none;
 }
 
 
