--- a/src/components/App.css
+++ b/src/components/App.css
@@ -834,7 +834,7 @@ footer #donate,
 .App.browse.khmer h1 { margin-top:70px; margin-bottom:50px; text-align: left; padding-left:35px;}
 
 .App.browse.khmer .SearchPane > div > div #samples {
-   padding-left:40px;
+   padding-left:115px;
    padding-right:70px;
 }
 
@@ -845,10 +845,14 @@ footer #donate,
    color: #d73449;
    font-weight: 700;
    width:120px;
+   height:65px;
+   display: flex;
+   align-items: center;
 }
 
 
 .App.browse.khmer .SearchPane > div > div .param {
+   position: relative;
    font-size:0;
 }
 
@@ -862,6 +866,9 @@ footer #donate,
    position: relative;
 }
 
+.App.browse.khmer .SearchPane > div > div .param .val > span { cursor: pointer;}
+.App.browse.khmer .SearchPane > div > div .param .val > span:hover { color:#d73449; }
+
 .App.browse.khmer .SearchPane > div > div .head + .param > .val {
    font-weight: 700;
 }
@@ -869,6 +876,38 @@ footer #donate,
 .App.browse.khmer .SearchPane > div > div .param > .val.on {
    color:#d73449;
    font-weight: 700;
+}
+
+.App.browse.khmer .SearchPane > div > div .param > .val.on > svg {
+   display: none;
+   position: absolute;
+   left:-30px;   
+   cursor: pointer;
+   z-index:1;
+   font-size:20px;
+}
+.App.browse.khmer .SearchPane > div > div .param > .val.on:hover > svg {
+   display: block;
+}
+.App.browse.khmer .SearchPane > div > div .param > .val.on::after {
+   content:'';
+   position: absolute;
+   left:-35px;
+   width:35px;
+   height:100%;
+   display: block;   
+   z-index:0;
+}
+
+.App.browse.khmer .SearchPane > div > div .param > .val.on + .param:not(:last-child)::before {
+   content:'';
+   display: block;
+   border-left:1px solid #d73449;
+   width:40px;
+   height:100%;
+   position: absolute;
+   left:-80px;
+   top:-30px;
 }
 
 .App.browse.khmer .SearchPane > div > div .param  .val + [data-simplebar],
@@ -883,7 +922,8 @@ footer #donate,
    background-color:rgba(239,239,239,0.425);
 }
 
-.App.browse.khmer .simplebar-scrollbar.simplebar-visible:before { opacity:0.35; }
+.App.browse.khmer .simplebar-scrollbar::before { background: #d73449; }
+.App.browse.khmer .simplebar-scrollbar.simplebar-visible::before { opacity:0.35; }
 
 .App.browse.khmer .SearchPane > div > div .param > .val::before {
    content:'';
@@ -902,11 +942,25 @@ footer #donate,
    top:0px;
 }
 
+/*
 .App.browse.khmer .SearchPane > div > div .param ~ .val::before,
+*/
+.App.browse.khmer .SearchPane > div > div .head +.param > .val + .param:not(#a)::before,
 .App.browse.khmer .SearchPane > div > div .head +.param > .val::before {
    content:none;
 }
 
+
+@media(max-width:1280px) {
+
+   .App.browse.khmer .SearchPane > div > div  {
+      padding-left:0;
+      max-width:calc(100% - 24px * 2);
+   }
+   .App.browse.khmer .SearchPane > div > div #samples {
+      padding-right:40px;
+   }
+}
 
 
 /* ---------------------------------------------------------------------------------------------------------------------- "sidepanes" */
