bug fixes + add expand less/more icons

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -883,6 +883,7 @@ footer #donate,
 
 .App.browse.khmer .SearchPane > div > div .param > .val > span svg {
    vertical-align: -7px;
+   position: absolute;
 }
 
 .App.browse.khmer .SearchPane > div > div .param > .val.on > svg {
