--- a/src/components/App.css
+++ b/src/components/App.css
@@ -822,9 +822,9 @@ footer #donate,
 
 }
 
-a.result .contenu ul > div:last-child h3[lang="km"] { font-size:16px; }
+a.result .contenu ul > div:last-child h3:is([lang$="-khmr"],[lang="km"]) { font-size:16px; }
 
-[lang="km"] { font-size:115%;}
+:is([lang$="-khmr"],[lang="km"]) { font-size:115%;}
 
 
 .App.browse.khmer .SearchPane > div > div { 
