--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,7 +7,7 @@
 
 @import url('//fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 
-@import url('//fonts.googleapis.com/css2?family=Noto+Sans+Khmer&display=swap');
+@import url('//fonts.googleapis.com/css2?family=Noto+Sans+Khmer:wght@400,700,900&display=swap');
 
 
 @import url('//fonts.googleapis.com/earlyaccess/notosanstibetan.css');
@@ -824,6 +824,8 @@ footer #donate,
 
 a.result .contenu ul > div:last-child h3:is([lang$="-khmr"],[lang="km"]) { font-size:16px; }
 
+#popLang li[lang="km"] {font-size:16px;line-height:16px;}
+
 :is([lang$="-khmr"],[lang="km"]) { font-size:115%;}
 
 
@@ -994,6 +996,14 @@ a.result .contenu ul > div:last-child h3:is([lang$="-khmr"],[lang="km"]) { font-
    }
 }
 
+
+#uiLangPopup { position: fixed; width:100%;height:100%; display: flex; align-items: center; justify-content: center; top:0; left:0; z-index:100000; }
+#uiLangPopup .bg { position: absolute;  width:100%;height:100%; background-color:rgba(0,0,0,0.2);} 
+#uiLangPopup .fg { position: relative; background-color:white; border-radius:5px; padding:20px;}
+#uiLangPopup .fg > div:first-child { display: flex; align-items: center;}
+#uiLangPopup .fg > div > div { width:100%; padding-top:15px;}
+#uiLangPopup .fg > div > div > li { justify-content: center;}
+#uiLangPopup .fg > div > div > li.is-locale { font-weight:900; background-color:#f5f5f5;}
 
 /* ---------------------------------------------------------------------------------------------------------------------- "sidepanes" */
 
